Details    : When processing waiting list for read extent lock and meeting read
             lock that is same or wider to it that is not contended, skip
	     processing rest of the list and immediatelly return current
	     status of conflictness, since we are guaranteed there are no
	     conflicting locks in the rest of the list.

--------------------------------------------------------------------------------

2007-12-07         Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.6.4
       * Support for kernels:
        2.6.5-7.286 (SLES 9),
        2.6.9-55.0.9.EL (RHEL 4),
        2.6.16.53-0.8 (SLES 10),
        2.6.18-8.1.14.el5 (RHEL 5),
        2.6.18.8 vanilla (kernel.org)
       * Client support for unpatched kernels:
        (see http://wiki.lustre.org/index.php?title=Patchless_Client)
        2.6.16 - 2.6.22 vanilla (kernel.org)
       * Due to recently discovered recovery problems, we do not recommend
        using patchless RHEL 4 clients with this or any earlier release.
       * Recommended e2fsprogs version: 1.40.2-cfs1
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.

Severity   : major
Frequency  : occasional
Bugzilla   : 13917
Description: MDS hang or stay in waiting lock
Details    : If client receive lock with CBPENDING flag ldlm need send lock
	     cancel as separate rpc, to avoid situation when cancel request
	     can't processed due all i/o threads stay in wait lock.

Severity   : normal
Frequency  : occasional
Bugzilla   : 13730
Description: Do not fail import if osc_interpret_create gets -EAGAIN
Details    : If osc_interpret_create got -EAGAIN it immediately exits and 
	     wakeup oscc_waitq.  After wakeup oscc_wait_for_objects call 
	     oscc_has_objects and see OSC has no objests and call 
	     oscc_internal_create to resend create request.

Severity   : enhancement
Bugzilla   : 13521
Description: Update kernel patches for SLES10 2.6.16.53-0.8.